--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
     "lint": "eslint ./src --ext .js,.jsx"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10",
     "yup": "^1.6.1",
-    "zod": "^4.0.5"
+    "zod": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
