--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
+# Development Environment Variables
 # VITE_API_BASE_URL=http://localhost:8000
 VITE_API_BASE_URL=https://backend.bandarupay.pro
 VITE_APP_NAME=Bandaru Pay Super Admin
 VITE_APP_VERSION=1.0.0
 VITE_APP_ENV=development
+
+# For local development with different backend port:
+# VITE_API_BASE_URL=http://localhost:3000
+
+# For testing with staging backend:
+# VITE_API_BASE_URL=https://staging.bandarupay.pro
