--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Development Environment Variables
-# VITE_API_BASE_URL=http://localhost:8000
-VITE_API_BASE_URL=https://backend.bandarupay.pro
+VITE_API_BASE_URL=http://localhost:8000/api/v1
+# VITE_API_BASE_URL=https://backend.bandarupay.pro/api/v1
 VITE_APP_NAME=Bandaru Pay Super Admin
 VITE_APP_VERSION=1.0.0
 VITE_APP_ENV=development
 
 # For local development with different backend port:
-# VITE_API_BASE_URL=http://localhost:3000
+# VITE_API_BASE_URL=http://localhost:3000/api/v1
 
 # For testing with staging backend:
-# VITE_API_BASE_URL=https://staging.bandarupay.pro
+# VITE_API_BASE_URL=https://staging.bandarupay.pro/api/v1
