--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables
-VITE_API_BASE_URL=https://backend.bandarupay.pro
+VITE_API_BASE_URL=https://backend.bandarupay.pro/api/v1
 VITE_APP_NAME=Bandaru Pay Super Admin
 VITE_APP_VERSION=1.0.0P
 VITE_APP_ENV=production
 
 # Note: Replace 'https://your-backend-domain.com' with your actual backend URL
-# Example: VITE_API_BASE_URL=https://api.bandarupay.pro
+# Example: VITE_API_BASE_URL=https://api.bandarupay.pro/api/v1
