--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Development Environment Variables
-VITE_API_BASE_URL=http://localhost:8000/api/v1
+# VITE_API_BASE_URL=http://localhost:8000/api/v1
+VITE_API_BASE_URL=https://fintech-backend-f9vu.onrender.com/api/v1
 # VITE_API_BASE_URL=https://backend.bandarupay.pro/api/v1
 VITE_APP_NAME=Bandaru Pay Super Admin
 VITE_APP_VERSION=1.0.0
