Fix: Update production API URL to Render backend
- Changed https://backend.bandarupay.pro to https://fintech-backend-f9vu.onrender.com
- Production builds now correctly point to Render deployed backend
- Fixes demo-login calling wrong endpoint in production

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables
-VITE_API_BASE_URL=https://backend.bandarupay.pro/api/v1
+VITE_API_BASE_URL=https://fintech-backend-f9vu.onrender.com/api/v1
 VITE_APP_NAME=Bandaru Pay Super Admin
-VITE_APP_VERSION=1.0.0P
+VITE_APP_VERSION=1.0.0
 VITE_APP_ENV=production
 
-# Note: Replace 'https://your-backend-domain.com' with your actual backend URL
-# Example: VITE_API_BASE_URL=https://api.bandarupay.pro/api/v1
+# Note: Using Render deployed backend
+# For custom domain deployment, update to: https://your-domain.com/api/v1
